--- a/sugary/src/index.css
+++ b/sugary/src/index.css
@@ -17,3 +17,12 @@ body {
 #root {
   flex-grow: 1;
 }
+
+/* Hide scrollbar but keep functionality */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
